// Vitest Snapshot v1

exports[`Text > it works with defaults 1`] = `
<div
  class="_text_c6fd40"
  data-testid="Text"
>
  Hello world
</div>
`;

exports[`Text > it works with paragraphs 1`] = `
<div
  class="_text_c6fd40"
  data-testid="Text"
>
  <p>
    Hello world
  </p>
  <p>
    Hello world
  </p>
  <p>
    Hello world
  </p>
</div>
`;
